<resources>
    <string name="app_name">FatecMobile</string>
    <string name="action_settings">Settings</string>
    <string name="btentrar">Entrar</string>
    <string name="btlistarTodos">Listar Todos</string>
    <string name="btlistarParam">Listar Parametros</string>
    <string name="btpesquisar">Pesquisar</string>
    <string name="btinserir">Inserir</string>
    <string name="btalterar">Alterar</string>
    <string name="btexcluir">Excluir</string>
    <string name="btnovousu">Novo Usuario</string>
    <string name="btnovo_prod">Novo Produto</string>
    <string name="btsalvar">Salvar</string>
    <string name="lblogin">Login</string>
    <string name="lbsenha">Senha</string>
    <string name="lbtipo">Tipo</string>
    <string name="lbstatus">Status</string>
    <string name="lbid">Id</string>
    <string name="lbusuariologado">UsuarioLogado</string>
    <string name="title_activity_add_usu">AddUsuActivity</string>
    <string name="title_activity_add_prod">AddProdActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_list_usu">ListUsuActivity</string>
    <string name="title_activity_upt_usu">UptUsuActivity</string>
    <string name="title_activity_list_usu_param">ListUsuParamActivity</string>
    <string name="lbnome">Nome</string>
    <string name="lbqtd">Quantidade</string>
    <string name="lbvalor">Valor</string>
    <string name="btlistarProdutos">listar produtos</string>
    <string name="btpesquisarProdutos">pesquisar produtos</string>
    <string name="title_activity_list_prod_pesq">lista de produros pesquisa</string>
    <string name="novo_cliente">novo cliente</string>
    <string name="btlistarClientes">listar clientes</string>
    <string name="btpesquisarClientes">pesquisar clientes</string>
    <string name="btnovo_est">novo estoque</string>
    <string name="btlistarEstoques">listar estoques</string>
    <string name="btpesquisarEstoques">pesquisar estoques</string>
    <string name="pesquisar_produto">pesquisar produto</string>
    <string name="lbnomecli">nome</string>
    <string name="lbcpf">CPF</string>
    <string name="lbdatanasc">data de nascimento</string>
    <string name="lbcidadecli">cidade</string>
    <string name="title_activity_add_cli">adicionar cliente</string>
    <string name="pesquisar_cliente">pesquisar cliente</string>
    <string name="pesquisar">pesquisar</string>
    <string name="title_activity_list_cli">lista de clientes</string>
    <string name="title_activity_list_cli_pesq">pesquisa de clientes</string>
    <string name="title_activity_upt_cli">update clientes</string>
    <string name="UptCliActivity">UptCli</string>
    <string name="lbcidadeest">cidade</string>
    <string name="lbcontas">contas</string>
    <string name="btinserirest">inserir</string>
    <string name="title_activity_add_est">add estoque</string>
    <string name="lbnomeest">nome</string>
    <string name="UptEstActivity">upt estoque</string>
    <string name="title_activity_list_est">list estoque</string>
    <string name="pesquisar_estoque">pesquisar estoque</string>
    <string name="title_activity_list_est_pesq">pesquisa estoque</string>
    <string name="lbspprod">spinner produto</string>
    <string name="lbspprodu">Produto</string>
    <string name="lbProduto">Produto</string>
    <string name="title_activity_menu2">Menu 2</string>
    <string name="btusuarios">usuários</string>
    <string name="btclientes">clientes</string>
    <string name="btprodutos">produtos</string>
    <string name="btestoques">estoques</string>
    <string name="btpedidos">pedidos</string>
    <string name="btnovo_cliente">novo cliente</string>
    <string name="title_activity_menu_cli">menu cliente</string>
    <string name="title_activity_menu_est">menu estoque</string>
    <string name="title_activity_menu_prod">menu produto</string>
    <string name="title_activity_menu_usu">menu usuarios</string>
    <string name="btlistarPedidos">listar pedidos</string>
    <string name="btpesquisarPedidos">pesquisar pedidos</string>
    <string name="btnovo_ped">novo pedido</string>
    <string name="title_activity_menu_ped">menu pedidos</string>
    <string name="lbnomecliente">nome do cliente</string>
    <string name="lbestoque">estoque</string>
    <string name="lbvalorped">valor do pedido</string>
    <string name="btinserirped">inserir</string>
    <string name="lbprod">produto</string>
    <string name="title_activity_add_ped">add pedido</string>
    <string name="lbidcliente">id cliente</string>
    <string name="lbidproduto">id produto</string>
    <string name="lbidest">id estoque</string>
    <string name="title_activity_upt_ped">upt pedido</string>
    <string name="title_activity_list_ped">list pedidos</string>
    <string name="lbidpedido">número do pedido</string>
    <string name="pesquisar_pedido">pesquisar pedido</string>
    <string name="title_activity_list_ped_pesq">pesquisa pedidos</string>

</resources>
