<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbnomecli" />
    <EditText
        android:id = "@+id/nomecli"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbcpf"/>
    <EditText
        android:id = "@+id/cpf"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbdatanasc"/>
    <EditText
        android:id = "@+id/datanasc"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbcidadecli"/>
    <EditText
        android:id = "@+id/cidade"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <Button
        android:id = "@+id/btalterar"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btalterar" />
    <Button
        android:id = "@+id/btexcluir"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btexcluir" />

</LinearLayout>