<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbidcliente" />
    <EditText
        android:id = "@+id/idcli"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbidproduto"/>
    <EditText
        android:id = "@+id/idprod"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbidest"/>
    <EditText
        android:id = "@+id/idest"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbvalorped"/>
    <EditText
        android:id = "@+id/idvalorped"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />


    <Button
        android:id = "@+id/btalterarped"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btalterar" />
    <Button
        android:id = "@+id/btexcluirped"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btexcluir" />

</LinearLayout>