<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbnome"/>
    <EditText
        android:id = "@+id/nome"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbcidadeest"/>
    <EditText
        android:id = "@+id/cidade"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbcontas"/>
    <EditText
        android:id = "@+id/contas"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbspprodu"/>
    <Spinner
        android:id = "@+id/idProduto"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbqtd"/>
    <EditText
        android:id = "@+id/qtd"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <Button
        android:id = "@+id/btinserirest"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btinserirest" />

</LinearLayout>
