<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbnomecliente"/>
    <Spinner
        android:id = "@+id/idCliente"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbprod" />
    <Spinner
        android:id = "@+id/idProduto"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbestoque"/>
    <Spinner
        android:id = "@+id/idEstoque"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbvalorped"/>
    <EditText
        android:id = "@+id/valorped"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text" />
    <Button
        android:id = "@+id/btinserirped"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btinserirped" />

</LinearLayout>
