<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lbUsuLogado_cli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbusuariologado" />

    <ImageView
        android:id="@+id/imgprodutos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/product" />

    <Button
        android:id="@+id/btlistprod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btlistarProdutos" />

    <Button
        android:id="@+id/btpesquisarprod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btpesquisarProdutos" />

    <Button
        android:id="@+id/btnovo_prod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnovo_prod" />

</LinearLayout>