<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lbUsuLogado_cli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbusuariologado" />

    <ImageView
        android:id="@+id/imagclientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/costumer" />

    <Button
        android:id="@+id/btlistcli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btlistarClientes" />

    <Button
        android:id="@+id/btpesquisarcliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btpesquisarClientes" />

    <Button
        android:id="@+id/btnovo_cli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnovo_cliente" />

</LinearLayout>